# py-template-space

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  VSCode-Setting.md  pyproject.toml  tox.ini
src/: __init__.py  main.py
tests/: __init__.py  test_main.py
