[tool.poetry]
name = "py-template-space"
version = "0.1.0"
description = ""
authors = ["Atsuki Shirasawa"]
license = "MIT License"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
ruff = "^0.0.263"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
select = [
    "E",    # pycodestype error
    "W",    # pycodestyle warning
    "F",    # pyflakes
    "C90",  # mccabe
    "I",    # isort
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "S",    # flake8-bandit 
]
ignore = [
    "D415", # pydocstyle about First line should end with a '.' , '?' or '!'
    "E501", # line too long, handled by black
]
target-version = "py39"

[tool.ruff.per-file-ignores]
# ignore assert error only in unnit-test
"*test_*.py" = ["S101"] 
"*_test.py" = ["S101"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10
